Fixing alignment of dismissible cookie notice alert with navbars
This currently isn’t generalised to dismissible alerts generally.

--- a/assets/stylesheets/bas-style-kit/_alerts.scss
+++ b/assets/stylesheets/bas-style-kit/_alerts.scss
@@ -113,7 +113,7 @@
       padding-right: 0;
 
       .close {
-        right: 15px;
+        right: 0;
       }
     }
   }
@@ -126,6 +126,10 @@
   .container-fluid {
     .alert-cookie-notice {
       padding-left: 0;
+
+      .close {
+        right: -35px;
+      }
     }
   }
 }
